# python-project-83

./: .env.example  .gitignore  Makefile  README.md  build.sh  database.sql  pyproject.toml  setup.cfg
.github/workflows/: lint.yml
page_analyzer/: __init__.py  app.py  config.py  db.py  normalizer.py  parser.py  validator.py
page_analyzer/services/: __init__.py  check_service.py  url_service.py
page_analyzer/templates/: 404_page.html  form.html  index.html  main.html  url_details.html  urls_list.html
tests/: __init__.py  conftest.py
tests/integration/: __init__.py  test_routes.py
tests/unit/: __init__.py  test_db.py  test_normalizer.py  test_normalizer_security.py  test_parser.py  test_validator.py  test_validator_security.py
